--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,10 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "name": "kiro-simple-retirement-planner",
-  "builds": [
+  "rewrites": [
     {
-      "src": "app.py",
-      "use": "@vercel/python"
+      "source": "/(.*)",
+      "destination": "/api/index"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app.py"
-    }
-  ],
-  "functions": {
-    "app.py": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  },
-  "regions": ["iad1"],
-  "env": {
-    "FLASK_ENV": "production"
-  }
+  ]
 }
