--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,10 +1,5 @@
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-click>=8.0.0
-tqdm>=4.62.0
-pytest>=6.0.0
 Flask==2.3.3
 WTForms==3.0.1
 plotly==5.17.0
-psutil==5.9.5
+numpy==1.24.3
+pandas==2.0.3
