--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
       "src": "api/index.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "50mb",
+        "runtime": "python3.9"
       }
     },
     {
@@ -28,7 +29,9 @@
   "functions": {
     "api/index.py": {
       "memory": 1024,
-      "maxDuration": 30
+      "maxDuration": 30,
+      "runtime": "python3.9"
     }
-  }
+  },
+  "installCommand": "pip install --no-cache-dir -r api/requirements.txt"
 }
